# nginx-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  config  nginx.conf  ngx_http_hello_world_module.c  ngx_http_hello_world_module.h  wrapper.h
examples/hello_world/: Cargo.toml  nginx.conf
examples/hello_world/src/: lib.rs
nginx-rs/: Cargo.toml  build.rs
nginx-rs/src/: bindings.rs  lib.rs  log.rs
nginx-rs/src/core/: buffer.rs  mod.rs  pool.rs  status.rs  string.rs
nginx-rs/src/http/: conf.rs  module.rs  request.rs  status.rs
src/: core.rs  http.rs  lib.rs  log.rs
src/core/: buffer.rs  pool.rs  status.rs  string.rs
src/http/: conf.rs  mod.rs  module.rs  request.rs
